# elsword_title_timer

./: Cargo.toml  LICENSE  README.md  config.json
src/: keys.rs  main.rs
src/helpers/: capture.rs
src/types/: config.rs  cooldown.rs  loader.rs  mod.rs  tab.rs  tracker.rs
src/ui/: debug_tab.rs  mod.rs  settings_tab.rs  tracker_tab.rs
