[package]
name = "title_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui_extras = { version = "0.31", features = ["image"] }
rdev = "0.5.3"
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"